--- a/article.html
+++ b/article.html
@@ -4,7 +4,7 @@
   "@type": "NewsArticle",
   "mainEntityOfPage":{
     "@type":"WebPage",
-    "@id":"https://google.com/article"
+    "@id":"<?php echo whatever; ?>"
   },
   "headline": "Article headline",
   "image": {
